argo-with-vcluster/terraform/argo/installations/manifests/argocd-server.ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1

metadata:
    name: argocd-server-ingress
    namespace: argocd
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
    rules:
        - host: argocd-server.127.0.0.1.nip.io
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: argocd-server
                            port:
                                name: https
